# modus

./: .gitignore  Cargo.toml  MODUS_V0.1.0_EXECUTION_PLAN.md  MODUS_V0.1.1_EXECUTION_PLAN.md  MODUS_V0.1.2_EXECUTION_PLAN.md  README.md  README.zh-CN.md  biome.json  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: electron-builder.config.ts  electron.vite.config.ts  package.json  tsconfig.json
apps/desktop/resources/: icon.icns
apps/desktop/scripts/: build-logo-sprite.cjs
apps/desktop/src/main/: index.ts
apps/desktop/src/main/agent/: agent-event-store.test.ts  agent-event-store.ts  agent-run-store.test.ts  agent-run-store.ts  agent-store.ts  checkpoint-service.ts  jsonl.ts  model-service.test.ts  model-service.ts  pi-event-normalizer.test.ts  pi-event-normalizer.ts  pi-permission-extension.ts  pi-rpc-service.ts  pi-sdk-runtime.test.ts  pi-sdk-runtime.ts  review-service.test.ts  review-service.ts  rollback-service.test.ts  rollback-service.ts  runtime-registry.ts  runtime.ts  session-title.test.ts  session-title.ts  shell-resolver.test.ts  shell-resolver.ts
apps/desktop/src/main/browser/: debug.ts  (+9 more)
apps/desktop/src/preload/: index.ts  types.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/shared/: approval.test.ts  approval.ts  command-line.test.ts  command-line.ts  contracts.ts  managed-process.test.ts  managed-process.ts  tools.test.ts  tools.ts
apps/web/: README.md
crates/pty-host/: Cargo.toml
crates/pty-host/src/: decoder.rs  main.rs
docs/architecture/: desktop-security.md
scripts/: inspect-browser-events.cjs
(+151 files in other folders)
