[package]
name = "modus-pty-host"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
codepage = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "winnls"] }
